# oat

./: .gitignore  Cargo.toml  README.md  test.py
src/: lib.rs  main.rs
src/backend/: mod.rs  platform.rs
src/backend/x64/: ast.rs  compile.rs  mod.rs  print.rs
src/frontend/: lexer.rs  mod.rs  parser.rs  typechecker.rs
src/llvm/: ast.rs  custom_parser.rs  interp.rs  lexer.rs  mod.rs  parser.lalrpop  parser.rs  parser_utils.rs  print.rs  utils.rs
src/llvm/dataflow/: alias.rs  constprop.rs  dce.rs  liveness.rs  mod.rs
src/oat/: ast.rs  ast_to_ll.rs  lexer.rs  mod.rs  parser.lalrpop  parser.rs  parser_utils.rs  print.rs  typecheck.rs  typechecker.rs
tests/: llvm.rs  llvm_parser_proptests.rs  oat_parser_proptests.rs
tests/programs/custom/: for_update_return.oat  global_array_access.oat  tc_global_fptr_var_assign.oat
tests/programs/hw4programs/: arrayargs.oat  arrayargs1.oat  arrayargs2.oat  arrayargs3.oat  binary_gcd.oat  binary_search.oat  bsort.oat  count_sort.oat  easyrun1.oat  easyrun10.oat  easyrun2.oat  easyrun3.oat  easyrun4.oat  easyrun5.oat  easyrun6.oat  easyrun7.oat  easyrun8.oat  easyrun9.oat  fac.oat  fact.oat  fibo.oat  gcd.oat  globals1.oat  globals2.oat  globals3.oat  globals4.oat  globals5.oat  globals6.oat  globals7.oat  gnomesort.oat  heap.oat  insertion_sort.oat  josh_joyce_test.oat  lcs.oat  lfsr.oat  lib11.oat  lib14.oat  lib15.oat  lib4.oat  lib5.oat  (+75 more)
tests/programs/hw5programs/: array_oob.oat  compile_array_fptr.oat  compile_array_init.oat  compile_assign_struct.oat  compile_basic_struct.oat  compile_builtin_argument.oat  conquest.oat  (+108 more)
(+66 files in other folders)
