[package]
name = "oat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
enum-map = "2.7.3"
internment = { version = "0.7.4", features = ["arena"] }
lalrpop-util = { version = "0.20.0", features = ["std", "lexer"] }
once_cell = "1.18.0"
thiserror = "1.0.50"

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer", "pico-args"] }
